--- a/index.qmd
+++ b/index.qmd
@@ -10,15 +10,7 @@ execute:
 # Forside {.unnumbered .unlisted}
 :::
 
-```{r}
-#| label: rm-cover-fig
-#| fig-align: center
-#| out-width: 40%
-#| echo: false
-#| fig-alt: Steno Diabetes Center Aarhus, Aarhus Universitetshospital
-
-knitr::include_graphics("rmlogo.png")
-```
+![](rmlogo.PNG)
 
 ::: {style="text-align: center"}
 **Testmanualer og informationer**\
