--- a/1-afklarende-samtale.qmd
+++ b/1-afklarende-samtale.qmd
@@ -1,4 +1,6 @@
-# Procedure for afklarende samtale {#sec-afklarende-samtale}
+---
+title: Procedure for afklarende samtale
+---
 
 1.  REDcap kan med fordel åbnes på forhånd. Desuden kan borgeren oprettes og data fra henvisningen registreres på forhånd. Hvis borger ikke er egnet eller afviser at deltage, kan brugeren slettes igen.
 
