--- a/4-opsætning-af-aktivitetsmåler.qmd
+++ b/4-opsætning-af-aktivitetsmåler.qmd
@@ -1,4 +1,6 @@
-# Opsætning af aktivitetsmåler {#sec-opsætning-af-aktivitetsmåler}
+---
+title: Opsætning af aktivitetsmåler
+---
 
 ## Download OmGui
 
