--- a/4-opsætning-af-aktivitetsmåler.qmd
+++ b/4-opsætning-af-aktivitetsmåler.qmd
@@ -1,5 +1,10 @@
 ---
 title: Opsætning af aktivitetsmåler
+format: 
+  html: default
+  pdf: default
+execute: 
+  echo: false
 ---
 
 ## Download OmGui
