--- a/6-Samtykkeerklæring.qmd
+++ b/6-Samtykkeerklæring.qmd
@@ -1,5 +1,10 @@
 ---
 title: Samtykkeerklæring
+format: 
+  html: default
+  pdf: default
+execute: 
+  echo: false
 ---
 
 **Informeret samtykke til deltagelse i et sundhedsvidenskabeligt forskningsprojekt**
