--- a/1-afklarende-samtale.qmd
+++ b/1-afklarende-samtale.qmd
@@ -22,9 +22,9 @@ execute:
 
 ## Hjælpetekst til information om projektet
 
-*… I den invitation du fik i e-boks omkring den her afklarende samtale, stod der også noget om et forskningsprojekt, som vi er en del af. Har du læst det? Vi har taget et nyt koncept til os, som hedder Lev Livet. Lev Livet er et nyudviklet tilbud til borgere med type 2-diabetes, der fokuserer på forståelse og håndtering af egen sygdom. Det er et tilbud som gør op med traditionel undervisning, og som prøver at drage jeres erfaringer i spil.* *Vi vil meget gerne blive klogere på, hvad der virker, så vi kan udvikle på vores tilbud. Helt specifikt vil vi undersøge, hvor godt Lev Livet virker alene og i kombination med fysisk aktivitet i et forskningsprojekt, som vi kalder LIVING.* *Vi arbejder sammen med Steno Diabetes Center og en række andre kommuner, så det er et stort forskningsprojekt, som har potentialet til at gøre os klogere på hvordan patientuddannelse (og træning) påvirker jeres forudsætninger for at træffe sunde valg i hverdagen, jeres livskvalitet og biologiske mål såsom blodsukker, kolesterol og blodtryk.* *Ved at deltage hjælper du os med at undersøge, hvordan Lev Livet virker for dig og andre borgere med type 2-diabetes. Det gør os i stand til at kvalitetssikre vores tilbud og yde den bedst mulige service. Hvis du vælger at deltage, vil det have den personlige nytte for dig, at du vil få foretaget og få tilbagemelding på nogle målinger og tests, som vi ikke normalt udfører på borgere i vores tilbud. Desuden vil du modtage et tilbud, der er baseret på forskning og viden.*
+*… I den invitation du fik i e-boks omkring den her afklarende samtale, stod der også noget om et forskningsprojekt, som vi er en del af. Har du læst det? Vi har taget et nyt koncept til os, som hedder Lev Livet. Lev Livet er et nyudviklet tilbud til borgere med type 2-diabetes, der fokuserer på forståelse og håndtering af egen sygdom. Det er et tilbud som gør op med traditionel undervisning, og som prøver at drage jeres erfaringer i spil.* *Vi vil meget gerne blive klogere på, hvad der virker, så vi kan udvikle på vores tilbud. Helt specifikt vil vi undersøge, hvor godt Lev Livet virker alene og i kombination med fysisk aktivitet i et forskningsprojekt, som vi kalder LIVING.* *Vi arbejder sammen med Steno Diabetes Center og en række andre kommuner, så det er et stort forskningsprojekt, som har potentialet til at gøre os klogere på hvordan patientuddannelse (og træning) påvirker jeres forudsætninger for at træffe sunde valg i hverdagen, jeres livskvalitet og biologiske mål såsom blodsukker og blodtryk.* *Ved at deltage hjælper du os med at undersøge, hvordan Lev Livet virker for dig og andre borgere med type 2-diabetes. Det gør os i stand til at kvalitetssikre vores tilbud og yde den bedst mulige service. Hvis du vælger at deltage, vil det have den personlige nytte for dig, at du vil få foretaget og få tilbagemelding på nogle målinger og tests, som vi ikke normalt udfører på borgere i vores tilbud. Desuden vil du modtage et tilbud, der er baseret på forskning og viden.*
 
-**Hvad indebærer det for dig?** *Hvis du har lyst til at deltage i forskningsprojektet vil du ved lodtrækning enten blive tilbudt at komme på det næste hold der starter, hvor du vil blive undervist i det nye koncept; Lev Livet (og modtage træning), eller også kommer du på en venteliste i 5 måneder. Efter de 5 måneder får du et tilbud om at komme på et hold. Lodtrækningen sker med 2/3 sandsynlighed for at komme på hold med det samme. Uanset om du kommer på hold eller venteliste, vil dit blodsukker og kolesteroltal blive målt undervejs i forløbet, og vi vil lave nogle fysiske tests med dig. Vi vil tage de første målinger allerede i dag. De næste vil vi tage om ca. 3 måneder og igen om 5 måneder. Desuden vil du blive bedt om at svare på spørgeskemaer på 5 tidspunkter. Der er ingen risici ved at deltage i forskningsprojektet.*
+**Hvad indebærer det for dig?** *Hvis du har lyst til at deltage i forskningsprojektet vil du ved lodtrækning enten blive tilbudt at komme på det næste hold der starter, hvor du vil blive undervist i det nye koncept; Lev Livet (og modtage træning), eller også kommer du på en venteliste i 5 måneder. Efter de 5 måneder får du et tilbud om at komme på et hold. Lodtrækningen sker med 2/3 sandsynlighed for at komme på hold med det samme. Uanset om du kommer på hold eller venteliste, vil dit blodsukker og blodtryk blive målt undervejs i forløbet, og vi vil lave nogle fysiske tests med dig. Vi vil tage de første målinger allerede i dag. De næste vil vi tage om ca. 3 måneder og igen om 5 måneder. Desuden vil du blive bedt om at svare på spørgeskemaer på 5 tidspunkter. Der er ingen risici ved at deltage i forskningsprojektet.*
 
 *Lev Livet forløbet består af i alt 9 kursusmoduler á ca. to timers varighed. De første fire kursusmoduler handler om hvordan man kan håndtere at leve med en kronisk sygdom. De næste fire moduler handler mere specifikt om at leve med type 2-diabetes. Endelig er der til sidst et opfølgningsmodul. De første otte moduler forløber over 8 uger og modul 9 ligger tre uger senere.*
 
@@ -44,7 +44,7 @@ Hvis borger forholder sig kritisk i forhold til ventelisten, er der en mere nuan
 
 **Hvad sker der, hvis jeg kommer i ventelistegruppen?** *Hvis du bliver udvalgt til ventelistegruppen, betyder det, at du kommer på venteliste i 5 måneder, hvorefter vi planlægger dit videre forløb. To ud af tre personer får tilbuddet med det samme, mens én ud af tre kommer på ventelisten. Hvis du kommer på ventelisten, vil du efter 5 måneder, få et tilbud som passer specifikt til dig. Det er vigtigt at vide, at det ikke er uforsvarligt at vente lidt. Mange med Type 2-diabetes har aldrig fået sådan et tilbud, og de fleste har haft sygdommen i flere år, før de kommer på et hold.*
 
-*Mens du venter, vil vi bede dig om at besvare et spørgeskema, som vi sender til din e-boks. Vi vil også lave nogle sundhedstests: måle dit blodtryk, tage en fingerpriktest for at måle dit blodsukker og kolesterol, måle din kropssammensætning, lave to korte fysiske tests, og sætte en bevægelsesmåler på dig, som vi håber, du vil bære i en uge. Disse tests gentager vi om 3 og 5 måneder.*
+*Mens du venter, vil vi bede dig om at besvare et spørgeskema, som vi sender til din e-boks. Vi vil også lave nogle sundhedstests: måle dit blodtryk, tage en fingerpriktest for at måle dit blodsukker, måle din kropssammensætning, lave to korte fysiske tests, og sætte en bevægelsesmåler på dig, som vi håber, du vil bære i en uge. Disse tests gentager vi om 3 og 5 måneder.*
 
 *Ved at deltage hjælper du os med at sikre, at sundhedstilbuddene i kommunen er så effektive som muligt, og du vil stadig få muligheden for at drage fordel af tilbuddet, selvom det måske ikke er med det samme. Din deltagelse er meget værdifuld for både dig selv, fordi du vil få foretaget tests, som vi normalt ikke laver, men du vil også være med til at sikre, at fremtidige deltagere får det bedst mulige tilbud.*
 
